@@ -34,6 +34,7 @@ examples/create_and_print_value_string.pl
 examples/create_and_print_value_time.pl
 examples/fixture_create_and_print_form_wd_dogczechsingular.pl
 examples/fixture_create_and_print_item_wd_dog.pl
+examples/fixture_create_and_print_item_wd_douglas_adams.pl
 examples/fixture_create_and_print_lexeme_wd_dog_czech_noun.pl
 examples/fixture_create_and_print_mediainfo_commons_imageofhuman.pl
 examples/fixture_create_and_print_mediainfo_snak_commons_depicts_human.pl
